--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="co.edu.cosw.cheapestprice.MainActivity">
-
-    <TextView
+    tools:context="edu.eci.cosw.cheapestPrice.MainActivity">
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical"
+        android:gravity="center"
+        >
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="match_parent"
+            android:layout_height="217dp"
+            app:srcCompat="@drawable/icono_cheapestprice"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/iniciar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Inicie sesión:"
+            android:textSize="@dimen/text_size_large"
+            android:layout_below="@+id/logo"/>
+
+        <EditText
+            android:id="@+id/email"
+            style="@style/Widget.AppCompat.AutoCompleteTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/correo"
+            android:inputType="textEmailAddress"
+            android:gravity="center"
+            android:layout_below="@+id/iniciar"/>
+
+        <EditText
+            android:id="@+id/password"
+            style="@style/Widget.AppCompat.AutoCompleteTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:layout_below="@+id/email"/>
+        <Button
+            android:id="@+id/login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login"
+            android:layout_centerInParent="true"
+            android:layout_below="@id/password"/>
+        <TextView
+            android:id="@+id/registro_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="O registrese:"
+            android:textSize="@dimen/text_size_large"
+            android:layout_below="@+id/login"/>
+        <Button
+            android:id="@+id/register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/register_button"
+            android:layout_centerInParent="true"
+            android:layout_below="@id/registro_text"/>
+    </RelativeLayout>
+
+
+
 
 </android.support.constraint.ConstraintLayout>
