--- a/app/src/main/res/layout/shopping_list_products.xml
+++ b/app/src/main/res/layout/shopping_list_products.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/nombreTitulo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="32sp"
+        android:text="Lista 1" />
 
     <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -36,19 +41,19 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/nombreLista"
+                    android:id="@+id/nombreProducto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Lista 1"
+                    android:text="Producto 1"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/fecha"
+                    android:id="@+id/precio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="14/02/2017"
+                    android:text="2000$"
                     android:textColor="@android:color/black"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -56,37 +61,62 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.50">
+                android:layout_weight="0.30"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/eliminar"
+                <TextView
+                    android:id="@+id/nombreTienda"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Eliminar" />
-            </LinearLayout>
+                    android:text="Tienda 1"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
+                <Button
+                    android:id="@+id/infoTienda"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Info. tienda" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5">
+                android:layout_weight="0.30"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/ver"
-                    android:layout_width="wrap_content"
+                <CheckBox
+                    android:id="@+id/favorito"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Ver" />
+                    android:text="Favorito" />
+
+                <CheckBox
+                    android:id="@+id/comprado"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Comprado" />
+
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.30"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:orientation="vertical">
+
+
+
+            </LinearLayout>
+
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/agregarLista"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:clickable="true"
-        android:src="@drawable/plus"
-        app:backgroundTint="#ff2fa0ff"
-        android:layout_gravity="end|bottom"/>
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
