--- a/app/src/main/res/layout/shopping_list_products.xml
+++ b/app/src/main/res/layout/shopping_list_products.xml
@@ -38,6 +38,7 @@
                 android:layout_weight="0.30"
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
+                android:layout_gravity="center"
                 android:orientation="vertical">
 
                 <TextView
@@ -56,30 +57,7 @@
                     android:text="2000$"
                     android:textColor="@android:color/black"
                     android:textSize="14sp" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.30"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/nombreTienda"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Tienda 1"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
-                <Button
-                    android:id="@+id/infoTienda"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Info. tienda" />
             </LinearLayout>
 
             <LinearLayout
@@ -110,12 +88,20 @@
                 android:layout_weight="0.30"
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-
+                <Button
+                    android:id="@+id/infoTienda"
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:text="Más" />
+                <Button
+                    android:id="@+id/eliminarProducto"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/delete"/>
 
             </LinearLayout>
-
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
