--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -69,12 +69,41 @@
                 android:hint="Ingrese el nombre de la tienda"
                 android:inputType="textPersonName" />
 
-            <EditText
-                android:id="@+id/shopAddress"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Ingrese la dirección de la tienda"
-                android:inputType="textEmailAddress" />
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/shopAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Ingrese la dirección de la tienda"
+                    android:inputType="textEmailAddress" />
+
+                <Button
+                    android:id="@+id/verMapa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Verificar dirección"
+                    android:onClick="verMapa"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:id="@+id/mapReg"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="gone">
+                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/map"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:context="edu.eci.cosw.cheapestPrice.RegisterActivity"
+                    android:layout_weight="0.90"
+                    />
+            </LinearLayout>
             <EditText
                 android:id="@+id/shopPhone"
                 android:layout_width="match_parent"
