Falta arreglar vista de listas de listas de mercado pero ya funciona

--- a/app/src/main/res/layout/shopping_list_products.xml
+++ b/app/src/main/res/layout/shopping_list_products.xml
@@ -104,5 +104,10 @@
             </LinearLayout>
 
         </LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerViewShoppingListProduct"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical" />
     </android.support.v7.widget.CardView>
 </LinearLayout>
