--- a/app/src/main/res/layout/product_view.xml
+++ b/app/src/main/res/layout/product_view.xml
@@ -9,14 +9,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     cardview:cardCornerRadius="2dp"
+    cardview:contentPadding="5dp"
     cardview:cardElevation="3dp"
     cardview:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/logo"
@@ -24,18 +24,17 @@
             android:layout_height="100dp" />
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/categoria"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -44,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/categoria"
                 android:textColor="@color/colorVerde"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -53,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/name"
                 android:textColor="@color/colorAzul"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -62,19 +61,19 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/marca"
                 android:textColor="@color/colorMarron"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/updateProduct"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_alignParentRight="true"
                 android:background="@mipmap/ic_edit" />
 
             <Button
                 android:id="@+id/deleteProduct"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_toLeftOf="@id/updateProduct"
                 android:background="@mipmap/ic_delete" />
 
