--- a/app/src/main/res/layout/popuptienda.xml
+++ b/app/src/main/res/layout/popuptienda.xml
@@ -69,11 +69,16 @@
             android:textSize="32sp"
             android:text="Horario" />
 
+        <ScrollView
+            android:id="@+id/ScrollViewHorarios"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" >
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewHorariosTienda"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical" />
+        </ScrollView>
         </LinearLayout>
 
 </LinearLayout>
