--- a/app/src/main/res/layout/shopping_list_products.xml
+++ b/app/src/main/res/layout/shopping_list_products.xml
@@ -10,9 +10,16 @@
         android:textSize="32sp"
         android:text="Lista 1" />
 
+    <ScrollView
+        android:id="@+id/ScrollViewProductos"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewShoppingListProduct"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical" />
+    </ScrollView>
+
 </LinearLayout>
