--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -12,6 +12,7 @@
         android:orientation="vertical">
 
         <SearchView
+            android:id="@+id/searchItems"
             android:layout_width="match_parent"
             android:layout_height="60dp" />
 
