funciona el registrar

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,133 +5,138 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="edu.eci.cosw.cheapestPrice.RegisterActivity">
-
-
-    <LinearLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:scrollbars="vertical">
+    <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/basicForm"
+
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Información del usuario:\n"
-                android:textSize="@dimen/text_size_medium"/>
-            <EditText
-                android:id="@+id/userName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Ingrese su usuario"
-                android:inputType="textPersonName" />
-
-            <EditText
-                android:id="@+id/userMail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Ingrese su correo"
-                android:inputType="textEmailAddress" />
-
-            <EditText
-                android:id="@+id/passwd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Ingrese su contraseña"
-                android:inputType="textPassword" />
-
-            <EditText
-                android:id="@+id/passwdConfirm"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="confirme su contraseña"
-                android:inputType="textPassword" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/extraForm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
-            android:visibility="gone">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="\nInformación de la tienda:\n"
-                android:textSize="@dimen/text_size_medium"/>
-            <EditText
-                android:id="@+id/shopName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Ingrese el nombre de la tienda"
-                android:inputType="textPersonName" />
+            android:scrollbars="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:id="@+id/basicForm"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Información del usuario:\n"
+                    android:textSize="@dimen/text_size_medium"/>
+                <EditText
+                    android:id="@+id/userName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Ingrese su usuario"
+                    android:inputType="textPersonName" />
 
                 <EditText
-                    android:id="@+id/shopAddress"
+                    android:id="@+id/userMail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Ingrese la dirección de la tienda"
+                    android:hint="Ingrese su correo"
                     android:inputType="textEmailAddress" />
 
-                <Button
-                    android:id="@+id/verMapa"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Verificar dirección"
-                    android:onClick="verMapa"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:id="@+id/mapReg"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:visibility="gone">
-                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:tools="http://schemas.android.com/tools"
-                    android:id="@+id/map"
-                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                <EditText
+                    android:id="@+id/passwd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:context="edu.eci.cosw.cheapestPrice.RegisterActivity"
-                    android:layout_weight="0.90"
-                    />
+                    android:hint="Ingrese su contraseña"
+                    android:inputType="textPassword" />
+
+                <EditText
+                    android:id="@+id/passwdConfirm"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="confirme su contraseña"
+                    android:inputType="textPassword" />
             </LinearLayout>
-            <EditText
-                android:id="@+id/shopPhone"
+            <LinearLayout
+                android:id="@+id/extraForm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Ingrese el teléfono de la tienda"
-                android:inputType="textEmailAddress" />
-            <EditText
-                android:id="@+id/shopNit"
-                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="\nInformación de la tienda:\n"
+                    android:textSize="@dimen/text_size_medium"/>
+                <EditText
+                    android:id="@+id/shopName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Ingrese el nombre de la tienda"
+                    android:inputType="textPersonName" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/shopAddress"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Ingrese la dirección de la tienda"
+                        android:inputType="textEmailAddress" />
+
+                    <Button
+                        android:id="@+id/verMapa"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Verificar dirección"
+                        android:onClick="verMapa"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:id="@+id/mapReg"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                        xmlns:tools="http://schemas.android.com/tools"
+                        android:id="@+id/map"
+                        android:name="com.google.android.gms.maps.SupportMapFragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        tools:context="edu.eci.cosw.cheapestPrice.RegisterActivity"
+                        android:layout_weight="0.90"
+                        />
+                </LinearLayout>
+                <EditText
+                    android:id="@+id/shopPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Ingrese el teléfono de la tienda"
+                    android:inputType="textEmailAddress" />
+                <EditText
+                    android:id="@+id/shopNit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Ingrese el NIT de la tienda"
+                    android:inputType="textEmailAddress" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/tiendaReg"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Ingrese el NIT de la tienda"
-                android:inputType="textEmailAddress" />
+                android:text="¿Desea registrar su tienda?"
+                android:onClick="tend"/>
+
+            <Button
+                android:id="@+id/register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Registrar"
+                android:onClick="reg"/>
         </LinearLayout>
+</ScrollView>
 
-        <Button
-            android:id="@+id/tiendaReg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="¿Desea registrar su tienda?"
-            android:onClick="tend"/>
 
-        <Button
-            android:id="@+id/register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Registrar"
-            android:onClick="reg"/>
-    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
