--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,7 @@
     tools:context="com.learn2crack.recyclerviewsearch.MainActivity">
     <item
         android:id="@+id/search"
-        android:icon="@drawable/ic_search"
+        android:icon="@mipmap/ic_search"
         android:title="Search"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
