--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#2385b7</color> <!-- Color azul cheapest price-->
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#40acff</color>
     <color name="colorVerde">#229954</color>
     <color name="colorAzul">#3498DB</color>
     <color name="colorMarron">#800000</color>
